--- a/index.html
+++ b/index.html
@@ -3,85 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Duncan Barnes</title>
+    <title>Your Website</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header -->
     <header>
-        <div class="container">
-            <h1>Duncan Barnes</h1>
-            <p id="typed-text"></p>
-        </div>
+        Your Website Name
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="section">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>
-                Hi, I'm Duncan Barnes, a software developer and data analyst with a passion for building scalable solutions and leveraging data to drive decision-making. 
-                With experience in Python, SQL, and cloud technologies, I specialize in creating efficient systems and delivering actionable insights. 
-                I enjoy solving complex problems and collaborating with teams to achieve impactful results.
-            </p>
-        </div>
-    </section>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+    </nav>
 
-    <!-- Skills Section -->
-    <section id="skills" class="section">
-        <div class="container">
-            <h2>Skills</h2>
-            <div class="skills-grid">
-                <div class="skill">Python</div>
-                <div class="skill">SQL</div>
-                <div class="skill">AWS</div>
-                <div class="skill">React</div>
-                <div class="skill">Data Analysis</div>
-                <div class="skill">Project Management</div>
-            </div>
-        </div>
-    </section>
+    <div class="hero" id="home">
+        <h1>Welcome to My Website</h1>
+        <p>Providing high-quality web solutions.</p>
+    </div>
 
-    <!-- Projects Section -->
-    <section id="projects" class="section parallax-section">
-        <div class="parallax-bg"></div>
-        <div class="container">
-            <h2>Projects</h2>
-            <div class="grid-container">
-                <div class="grid-item">
-                    <h3>Project 1</h3>
-                    <p>A brief description of your project. Highlight the tools and technologies used.</p>
-                    <a href="#" class="btn">View Project</a>
-                </div>
-                <div class="grid-item">
-                    <h3>Project 2</h3>
-                    <p>Another project description. Explain what you achieved and how it works.</p>
-                    <a href="#" class="btn">View Project</a>
-                </div>
-            </div>
-        </div>
-    </section>
+    <div class="section" id="services">
+        <h2>Our Services</h2>
+        <p>We offer website design, development, and maintenance.</p>
+    </div>
 
-    <!-- Contact Section -->
-    <section id="contact" class="section">
-        <div class="container">
-            <h2>Contact</h2>
-            <p>If you'd like to get in touch, feel free to email me at <a href="mailto:youremail@example.com">youremail@example.com</a>.</p>
-        </div>
-    </section>
+    <div class="section" id="portfolio">
+        <h2>Portfolio</h2>
+        <p>Check out our recent projects.</p>
+    </div>
 
-    <!-- Footer -->
+    <div class="section" id="contact">
+        <h2>Contact Us</h2>
+        <p>Email: contact@example.com</p>
+    </div>
+
     <footer>
-        <div class="container">
-            <p>&copy; 2023 Your Name. All rights reserved.</p>
-        </div>
+        &copy; 2025 Your Website. All rights reserved.
     </footer>
-
-    <!-- Scripts -->
-    <script src="assets/gsap.min.js"></script>
-    <script src="assets/ScrollTrigger.min.js"></script>
-    <script src="assets/typed.min.js"></script>
+    
     <script src="script.js"></script>
 </body>
 </html>
