--- a/index.html
+++ b/index.html
@@ -3,45 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>Duncan | Web Developer</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
+
+    <!-- Navigation -->
     <header>
-        Your Website Name
+        <nav>
+            <div class="logo">
+                <img src="logo.png" alt="Logo">
+                <span>Duncan's Portfolio</span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <a href="#contact" class="btn">Contact Me</a>
+            <div class="hamburger">&#9776;</div>
+        </nav>
     </header>
 
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-    </nav>
+    <!-- Hero Section -->
+    <section id="home" class="hero fade-in">
+        <h1>Welcome to My Portfolio<br>I'm Duncan, a Web Developer.</h1>
+        <p>Next.js | React | JavaScript | Freelance Web Development</p>
+        <div class="buttons">
+            <a href="#" class="btn">Download my CV</a>
+            <a href="#portfolio" class="btn-outline">See my projects</a>
+        </div>
+    </section>
 
-    <div class="hero" id="home">
-        <h1>Welcome to My Website</h1>
-        <p>Providing high-quality web solutions.</p>
-    </div>
+    <!-- Services Section -->
+    <section id="services" class="fade-in">
+        <h2>What I Do</h2>
+        <div class="services-container">
+            <div class="service-card">
+                <img src="web-dev-icon.png" alt="Web Development">
+                <h3>Web Development</h3>
+                <p>I build modern, high-performance websites using Next.js, React, and JavaScript.</p>
+            </div>
+        </div>
+    </section>
 
-    <div class="section" id="services">
-        <h2>Our Services</h2>
-        <p>We offer website design, development, and maintenance.</p>
-    </div>
-
-    <div class="section" id="portfolio">
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="fade-in">
         <h2>Portfolio</h2>
-        <p>Check out our recent projects.</p>
-    </div>
+        <p>Check out my recent projects.</p>
+    </section>
 
-    <div class="section" id="contact">
-        <h2>Contact Us</h2>
+    <!-- Contact Section -->
+    <section id="contact" class="fade-in">
+        <h2>Contact</h2>
         <p>Email: contact@example.com</p>
-    </div>
+    </section>
 
-    <footer>
-        &copy; 2025 Your Website. All rights reserved.
-    </footer>
-    
-    <script src="script.js"></script>
 </body>
 </html>
