--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="logo">
                 <img src="logo.png" alt="Logo">
-                <span>Duncan's Portfolio</span>
+                <span>Duncan Barnes</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -24,6 +24,14 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <a href="#contact" class="btn">Contact Me</a>
+            
+            <!-- Theme Toggle Dropdown -->
+            <select id="theme-toggle">
+                <option value="light">Light Mode</option>
+                <option value="dark">Dark Mode</option>
+                <option value="system">System</option>
+            </select>
+
             <div class="hamburger">&#9776;</div>
         </nav>
     </header>
