--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="logo.png" alt="Logo">
+                <img src="assets/logo.png" alt="Logo">
                 <span>Duncan Barnes</span>
             </div>
             <ul class="nav-links">
