--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero fade-in">
         <h1>Welcome to My Portfolio<br>I'm Duncan, a Web Developer.</h1>
-        <p>Next.js | React | JavaScript | Freelance Web Development</p>
+        <p>Python | Java | Freelance Web Development</p>
         <div class="buttons">
             <a href="assets/resume.pdf" target="_blank" class="btn">View My Resume</a>
             <a href="#portfolio" class="btn-outline">See My Projects</a>
