made some edits

--- a/index.html
+++ b/index.html
@@ -59,10 +59,14 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="fade-in">
+     <section id="portfolio" class="fade-in">
         <h2>Portfolio</h2>
-        <p>Check out my recent projects.</p>
+        <p>Check out my recent GitHub projects.</p>
+        <div id="github-projects" class="projects-container">
+        <!-- Projects will be injected here dynamically -->
+        </div>
     </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="fade-in">
@@ -86,7 +90,7 @@
         <!-- Direct Email & Social Links -->
         <div class="contact-info">
             <p>Email: <a href="mailto:duncanbarnes02@gmail.com">duncanbarnes02@gmail.com</a></p>
-            <p>Phone: <a href="tel:+1234567890">+123 456 7890</a></p>
+            <p>Phone: <a href="tel:+1 408 605 4128">(408) 605-4128</a></p>
         </div>
 
         <div class="social-links">
